test(shopping-seller): [skip-docs] add comprehensive test suite with fixture pattern
- add 15 test files covering all 6 domains (seller, product, inventory, coupon, timedeal, queue)
- create SellerFixture, ProductFixture, InventoryFixture, CouponFixture, TimeDealFixture, QueueFixture
- add IntegrationTest base class (PostgreSQL + Redis Testcontainers)
- cover Saga compensation (reserve/deduct/release) in domain and service tests
- refactor existing scheduler tests with @Nested structure
- 108+ tests, BUILD SUCCESSFUL