@@ -1,11 +1,12 @@
 package com.portal.universe.shoppingsellerservice.timedeal.scheduler;
 
 import com.portal.universe.event.seller.TimeDealUpdatedEvent;
+import com.portal.universe.shoppingsellerservice.support.fixture.TimeDealFixture;
 import com.portal.universe.shoppingsellerservice.timedeal.domain.TimeDeal;
-import com.portal.universe.shoppingsellerservice.timedeal.domain.TimeDealProduct;
 import com.portal.universe.shoppingsellerservice.timedeal.domain.TimeDealStatus;
 import com.portal.universe.shoppingsellerservice.timedeal.repository.TimeDealRepository;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -13,9 +14,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.context.ApplicationEventPublisher;
-import org.springframework.test.util.ReflectionTestUtils;
 
-import java.math.BigDecimal;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.Collections;
@@ -26,6 +25,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
+@DisplayName("TimeDealScheduler")
 class TimeDealSchedulerTest {
 
     @Mock
@@ -37,106 +37,108 @@ class TimeDealSchedulerTest {
     @InjectMocks
     private TimeDealScheduler timeDealScheduler;
 
-    private TimeDeal createTimeDeal(Long id, Long sellerId, String name,
-                                     TimeDealStatus status, Instant startsAt, Instant endsAt) {
-        TimeDeal timeDeal = TimeDeal.builder()
-                .sellerId(sellerId)
-                .name(name)
-                .description("desc")
-                .startsAt(startsAt)
-                .endsAt(endsAt)
-                .build();
-        ReflectionTestUtils.setField(timeDeal, "id", id);
-        ReflectionTestUtils.setField(timeDeal, "status", status);
+    @Nested
+    @DisplayName("updateTimeDealStatus")
+    class UpdateTimeDealStatus {
 
-        TimeDealProduct product = TimeDealProduct.builder()
-                .timeDeal(timeDeal)
-                .productId(100L)
-                .dealPrice(BigDecimal.valueOf(5000))
-                .dealQuantity(50)
-                .maxPerUser(2)
-                .build();
-        timeDeal.addProduct(product);
+        @Test
+        @DisplayName("should activate scheduled deal and publish event when start time reached")
+        void should_activate_scheduled_deal() {
+            // given
+            TimeDeal deal = TimeDealFixture.builder()
+                    .id(1L).sellerId(10L).name("Flash Sale")
+                    .status(TimeDealStatus.SCHEDULED)
+                    .startsAt(Instant.now().minus(1, ChronoUnit.HOURS))
+                    .endsAt(Instant.now().plus(5, ChronoUnit.HOURS))
+                    .build();
+            deal.addProduct(TimeDealFixture.createProduct(deal, 100L));
+            when(timeDealRepository.findDealsToStart(any(Instant.class))).thenReturn(List.of(deal));
+            when(timeDealRepository.findDealsToEnd(any(Instant.class))).thenReturn(Collections.emptyList());
 
-        return timeDeal;
-    }
+            // when
+            timeDealScheduler.updateTimeDealStatus();
 
-    @Test
-    @DisplayName("should_activateScheduledDeals_when_startTimeReached")
-    void should_activateScheduledDeals_when_startTimeReached() {
-        // given
-        TimeDeal deal = createTimeDeal(1L, 10L, "Flash Sale", TimeDealStatus.SCHEDULED,
-                Instant.now().minus(1, ChronoUnit.HOURS), Instant.now().plus(5, ChronoUnit.HOURS));
-        when(timeDealRepository.findDealsToStart(any(Instant.class))).thenReturn(List.of(deal));
-        when(timeDealRepository.findDealsToEnd(any(Instant.class))).thenReturn(Collections.emptyList());
+            // then
+            assertThat(deal.getStatus()).isEqualTo(TimeDealStatus.ACTIVE);
+            verify(timeDealRepository).saveAll(List.of(deal));
 
-        // when
-        timeDealScheduler.updateTimeDealStatus();
+            ArgumentCaptor<TimeDealUpdatedEvent> captor = ArgumentCaptor.forClass(TimeDealUpdatedEvent.class);
+            verify(eventPublisher).publishEvent(captor.capture());
+            assertThat(captor.getValue().getStatus()).isEqualTo("ACTIVE");
+        }
 
-        // then
-        assertThat(deal.getStatus()).isEqualTo(TimeDealStatus.ACTIVE);
-        verify(timeDealRepository).saveAll(List.of(deal));
+        @Test
+        @DisplayName("should end active deal and publish event when end time reached")
+        void should_end_active_deal() {
+            // given
+            TimeDeal deal = TimeDealFixture.builder()
+                    .id(2L).sellerId(10L).name("Old Deal")
+                    .status(TimeDealStatus.ACTIVE)
+                    .startsAt(Instant.now().minus(5, ChronoUnit.HOURS))
+                    .endsAt(Instant.now().minus(1, ChronoUnit.HOURS))
+                    .build();
+            deal.addProduct(TimeDealFixture.createProduct(deal, 100L));
+            when(timeDealRepository.findDealsToStart(any(Instant.class))).thenReturn(Collections.emptyList());
+            when(timeDealRepository.findDealsToEnd(any(Instant.class))).thenReturn(List.of(deal));
 
-        ArgumentCaptor<TimeDealUpdatedEvent> captor = ArgumentCaptor.forClass(TimeDealUpdatedEvent.class);
-        verify(eventPublisher).publishEvent(captor.capture());
-        assertThat(captor.getValue().getStatus()).isEqualTo("ACTIVE");
-    }
+            // when
+            timeDealScheduler.updateTimeDealStatus();
 
-    @Test
-    @DisplayName("should_endActiveDeals_when_endTimeReached")
-    void should_endActiveDeals_when_endTimeReached() {
-        // given
-        TimeDeal deal = createTimeDeal(2L, 10L, "Old Deal", TimeDealStatus.ACTIVE,
-                Instant.now().minus(5, ChronoUnit.HOURS), Instant.now().minus(1, ChronoUnit.HOURS));
-        when(timeDealRepository.findDealsToStart(any(Instant.class))).thenReturn(Collections.emptyList());
-        when(timeDealRepository.findDealsToEnd(any(Instant.class))).thenReturn(List.of(deal));
+            // then
+            assertThat(deal.getStatus()).isEqualTo(TimeDealStatus.ENDED);
+            verify(timeDealRepository).saveAll(List.of(deal));
 
-        // when
-        timeDealScheduler.updateTimeDealStatus();
+            ArgumentCaptor<TimeDealUpdatedEvent> captor = ArgumentCaptor.forClass(TimeDealUpdatedEvent.class);
+            verify(eventPublisher).publishEvent(captor.capture());
+            assertThat(captor.getValue().getStatus()).isEqualTo("ENDED");
+        }
 
-        // then
-        assertThat(deal.getStatus()).isEqualTo(TimeDealStatus.ENDED);
-        verify(timeDealRepository).saveAll(List.of(deal));
+        @Test
+        @DisplayName("should do nothing when no deals need status transition")
+        void should_do_nothing_when_no_transitions() {
+            // given
+            when(timeDealRepository.findDealsToStart(any(Instant.class))).thenReturn(Collections.emptyList());
+            when(timeDealRepository.findDealsToEnd(any(Instant.class))).thenReturn(Collections.emptyList());
 
-        ArgumentCaptor<TimeDealUpdatedEvent> captor = ArgumentCaptor.forClass(TimeDealUpdatedEvent.class);
-        verify(eventPublisher).publishEvent(captor.capture());
-        assertThat(captor.getValue().getStatus()).isEqualTo("ENDED");
-    }
+            // when
+            timeDealScheduler.updateTimeDealStatus();
 
-    @Test
-    @DisplayName("should_doNothing_when_noDealsToTransition")
-    void should_doNothing_when_noDealsToTransition() {
-        // given
-        when(timeDealRepository.findDealsToStart(any(Instant.class))).thenReturn(Collections.emptyList());
-        when(timeDealRepository.findDealsToEnd(any(Instant.class))).thenReturn(Collections.emptyList());
+            // then
+            verify(timeDealRepository, never()).saveAll(any());
+            verify(eventPublisher, never()).publishEvent(any(TimeDealUpdatedEvent.class));
+        }
 
-        // when
-        timeDealScheduler.updateTimeDealStatus();
+        @Test
+        @DisplayName("should activate and end deals when both exist simultaneously")
+        void should_handle_both_activate_and_end() {
+            // given
+            TimeDeal toActivate = TimeDealFixture.builder()
+                    .id(1L).sellerId(10L).name("New Deal")
+                    .status(TimeDealStatus.SCHEDULED)
+                    .startsAt(Instant.now().minus(1, ChronoUnit.HOURS))
+                    .endsAt(Instant.now().plus(5, ChronoUnit.HOURS))
+                    .build();
+            toActivate.addProduct(TimeDealFixture.createProduct(toActivate, 100L));
 
-        // then
-        verify(timeDealRepository, never()).saveAll(any());
-        verify(eventPublisher, never()).publishEvent(any(TimeDealUpdatedEvent.class));
-    }
+            TimeDeal toEnd = TimeDealFixture.builder()
+                    .id(2L).sellerId(10L).name("Old Deal")
+                    .status(TimeDealStatus.ACTIVE)
+                    .startsAt(Instant.now().minus(5, ChronoUnit.HOURS))
+                    .endsAt(Instant.now().minus(1, ChronoUnit.HOURS))
+                    .build();
+            toEnd.addProduct(TimeDealFixture.createProduct(toEnd, 200L));
 
-    @Test
-    @DisplayName("should_activateAndEndDeals_when_bothExist")
-    void should_activateAndEndDeals_when_bothExist() {
-        // given
-        TimeDeal toActivate = createTimeDeal(1L, 10L, "New Deal", TimeDealStatus.SCHEDULED,
-                Instant.now().minus(1, ChronoUnit.HOURS), Instant.now().plus(5, ChronoUnit.HOURS));
-        TimeDeal toEnd = createTimeDeal(2L, 10L, "Old Deal", TimeDealStatus.ACTIVE,
-                Instant.now().minus(5, ChronoUnit.HOURS), Instant.now().minus(1, ChronoUnit.HOURS));
+            when(timeDealRepository.findDealsToStart(any(Instant.class))).thenReturn(List.of(toActivate));
+            when(timeDealRepository.findDealsToEnd(any(Instant.class))).thenReturn(List.of(toEnd));
 
-        when(timeDealRepository.findDealsToStart(any(Instant.class))).thenReturn(List.of(toActivate));
-        when(timeDealRepository.findDealsToEnd(any(Instant.class))).thenReturn(List.of(toEnd));
+            // when
+            timeDealScheduler.updateTimeDealStatus();
 
-        // when
-        timeDealScheduler.updateTimeDealStatus();
-
-        // then
-        assertThat(toActivate.getStatus()).isEqualTo(TimeDealStatus.ACTIVE);
-        assertThat(toEnd.getStatus()).isEqualTo(TimeDealStatus.ENDED);
-        verify(timeDealRepository, times(2)).saveAll(any());
-        verify(eventPublisher, times(2)).publishEvent(any(TimeDealUpdatedEvent.class));
+            // then
+            assertThat(toActivate.getStatus()).isEqualTo(TimeDealStatus.ACTIVE);
+            assertThat(toEnd.getStatus()).isEqualTo(TimeDealStatus.ENDED);
+            verify(timeDealRepository, times(2)).saveAll(any());
+            verify(eventPublisher, times(2)).publishEvent(any(TimeDealUpdatedEvent.class));
+        }
     }
 }
